# tezos-on-tezos

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  local.env  nairobi.env
context/: Cargo.toml
context/src/: context.rs  error.rs  lib.rs  migrations.rs
context/src/context/: ephemeral.rs  executor.rs  interpreter.rs  viewer.rs
context/src/types/: batch.rs  config.rs  head.rs  mod.rs  node.rs
dac_codec/: Cargo.toml
dac_codec/src/: main.rs
dac_coder/: Cargo.toml
dac_coder/src/: main.rs
facade/: Cargo.toml
facade/src/: client.rs  context.rs  error.rs  facade.rs  main.rs  mock.rs  provider.rs  rollup.rs  routes.rs  rpc.rs
facade/src/rollup/: block_id.rs  mock_node.rs  rpc_client.rs  rpc_helpers.rs
facade/src/services/: blocks.rs  context.rs  contracts.rs  helpers.rs  mod.rs  operations.rs  shell.rs
genesis_kernel/: Cargo.toml
genesis_kernel/src/: installer.rs  lib.rs
installer/: Cargo.toml
installer/src/: installer.rs  lib.rs
kernel/: Cargo.toml
kernel/src/: context.rs  crypto.rs  error.rs  inbox.rs  kernel.rs  lib.rs  store.rs  validator.rs
kernel/src/executor/: reveal.rs
kernel/src/tezos/: coder.rs  context.rs  mod.rs
kernel_io/: Cargo.toml  README.md
kernel_io/src/: error.rs  inbox.rs  lib.rs  store.rs
layered_store/: Cargo.toml  README.md
layered_store/src/: ephemeral.rs  error.rs  generic.rs  kernel.rs  lib.rs  store.rs  tezos.rs
layered_store/src/types/: generic.rs  mod.rs  tezos.rs
michelson_derive/: Cargo.toml  README.md
michelson_derive/src/: derive.rs  lib.rs  tuple.rs
michelson_derive/tests/: test.rs
michelson_interop/: Cargo.toml  README.md
michelson_interop/src/: adt.rs  core.rs  domain.rs  error.rs  generic.rs  lib.rs  numeric.rs
michelson_vm/: Cargo.toml  Makefile  README.md
michelson_vm/src/: entrypoints.rs  error.rs  formatter.rs  interpreter.rs  lib.rs  mock.rs  script.rs  stack.rs  store.rs  tracer.rs  typechecker.rs  types.rs
michelson_vm/src/instructions/: algebraic.rs  collections.rs  contract.rs  control.rs  crypto.rs  generic.rs  lambda.rs  math.rs  mod.rs  scope.rs  stack.rs  tickets.rs
michelson_vm/src/types/: big_map.rs  contract.rs  core.rs  encoded.rs  int.rs  lambda.rs  list.rs  map.rs  mutez.rs  nat.rs  operation.rs  option.rs  or.rs  pair.rs  set.rs  ticket.rs  timestamp.rs
michelson_vm/tests/: opcodes.rs  tzt.rs
michelson_vm/tests/runner/: e2e.rs  micheline.rs  mock.rs  mod.rs  tzt.rs
proto/: Cargo.toml
proto/src/: constants.rs  lib.rs  validator.rs
proto/src/context/: checksum.rs  ephemeral.rs  head.rs  interpreter.rs  migrations.rs  mod.rs  proto.rs  types.rs
proto/src/error/: mod.rs  rpc.rs  rpc_errors.rs  vm.rs
proto/src/errors/: mod.rs  rpc_errors.rs
proto/src/executor/: balance_update.rs  balance_updates.rs  contract.rs  lazy_diff.rs  mod.rs  operation.rs  origination.rs  result.rs  reveal.rs  transaction.rs
proto/src/producer/: mod.rs  types.rs
proto/src/validator/: batch.rs  mod.rs  operation.rs
proto/src/vm/: context.rs  interpreter.rs  mod.rs  script.rs  stack.rs  tracer.rs  typecheck.rs  typechecker.rs  types.rs
proto/tests/: tzt_abs.rs  tzt_abs_00.rs  tzt_abs_01.rs  tzt_abs_02.rs  tzt_add.rs  tzt_add_int_int_00.rs  tzt_add_int_nat_00.rs  tzt_add_int_nat_01.rs  tzt_add_int_timestamp_00.rs  tzt_add_mutez_mutez_00.rs  tzt_add_mutez_mutez_01.rs  tzt_add_nat_int_00.rs  tzt_add_nat_nat_00.rs  tzt_add_timestamp_int_00.rs  tzt_add_timestamp_int_01.rs  tzt_add_timestamp_int_02.rs  tzt_add_timestamp_int_03.rs  tzt_address.rs  tzt_address_00.rs  tzt_address_01.rs  tzt_address_02.rs  tzt_amount.rs  tzt_amount_00.rs  tzt_and.rs  tzt_and_bool_bool_00.rs  tzt_and_bool_bool_01.rs  tzt_and_bool_bool_02.rs  tzt_and_bool_bool_03.rs  tzt_and_nat_nat_00.rs  tzt_and_nat_nat_01.rs  tzt_and_nat_nat_02.rs  tzt_and_nat_nat_03.rs  tzt_and_nat_nat_04.rs  tzt_apply.rs  tzt_apply_00.rs  tzt_balance.rs  tzt_balance_00.rs  tzt_car.rs  tzt_car_00.rs  tzt_car_01.rs  (+441 more)
proto/tests/data/: tzt_abs_02.json  tzt_add_int_int_00.json  tzt_add_nat_nat_00.json  tzt_address_00.json  tzt_and_bool_bool_02.json  tzt_and_nat_nat_02.json  tzt_and_nat_nat_03.json  tzt_cdr_00.json  tzt_chain_id_00.json  tzt_chain_id_01.json  tzt_compare_int_01.json  tzt_compare_int_02.json  tzt_compare_nat_00.json  tzt_compare_timestamp_00.json  tzt_compare_timestamp_01.json  tzt_compare_timestamp_02.json  tzt_compare_timestamp_04.json  tzt_concat_bytes_01.json  tzt_concat_listbytes_00.json  tzt_concat_liststring_03.json  tzt_concat_string_00.json  tzt_contract_04.json  tzt_dip_00.json  tzt_dip_02.json  tzt_dugn_00.json  tzt_ediv_int_int_00.json  tzt_ediv_mutez_nat_06.json  (+44 more)
sapling_kernel/: Cargo.toml  README.md
sapling_kernel/src/: error.rs  kernel.rs  lib.rs  payload.rs
sapling_proto/: Cargo.toml  README.md
sapling_proto/src/: codec.rs  executor.rs  formatter.rs  lib.rs  params.rs  storage.rs  transaction.rs  tree.rs  types.rs  validator.rs
sapling_proto/tests/: tutorial.rs
tez_kernel/: Cargo.toml
tez_kernel/src/: baker.rs  context.rs  crypto.rs  error.rs  executor.rs  kernel.rs  lib.rs  producer.rs  validator.rs
tez_proto/: Cargo.toml
tez_proto/src/: constants.rs  error.rs  lib.rs  validator.rs
tezos_ctx/: Cargo.toml
tezos_ctx/src/: context.rs  error.rs  lib.rs
tezos_kernel/: Cargo.toml  README.md
tezos_kernel/src/: error.rs  inbox.rs  kernel.rs  lib.rs  mempool.rs  payload.rs  shell.rs
tezos_l2/: Cargo.toml
tezos_l2/src/: batcher.rs  error.rs  lib.rs
tezos_l2/tests/: managers.rs  opcodes.rs
tezos_node/: Cargo.toml  README.md
tezos_node/src/: error.rs  lib.rs  main.rs  mock.rs  rollup.rs  services.rs
tezos_node/tests/: facade.rs  quickstart.rs
tezos_proto/: Cargo.toml  README.md
tezos_proto/src/: batcher.rs  config.rs  error.rs  lib.rs
tezos_proto/tests/: managers.rs  opcodes.rs
tezos_vm/: Cargo.toml  README.md
tezos_vm/src/: entrypoints.rs  error.rs  formatter.rs  interpreter.rs  lib.rs  script.rs  typechecker.rs
tezos_vm/tests/: opcodes.rs  tzt.rs
zcash_params/: Cargo.toml  README.md
zcash_params/src/: main.rs
(+1127 files in other folders)
