# SPDX-FileCopyrightText: 2023 Baking Bad <hello@bakingbad.dev>
#
# SPDX-License-Identifier: MIT

[workspace]
members = [
  "tezos_proto",
  "tezos_kernel",
  "tezos_node",
  "michelson_vm",
  "layered_store",
  "sapling_proto",
  "sapling_kernel",
  "zcash_params"
]

[profile.release]
lto = true
opt-level = 'z'
panic = "abort"