# SPDX-FileCopyrightText: 2023 Baking Bad <hello@bakingbad.dev>
#
# SPDX-License-Identifier: MIT

[workspace]
members = [
  "tezos_proto",
  "tezos_kernel",
  "tezos_node",
  "michelson_vm",
  "michelson_derive",
  "michelson_interop",
  "layered_store",
  "sapling_proto",
  "sapling_kernel",
  "zcash_params",
  "kernel_io"
]

[patch.crates-io]
# FIXME: use "custom" feature to avoid unexpected behavior
getrandom = { git = "https://github.com/baking-bad/getrandom", branch = "patch/0.2" }

[profile.release]
lto = true
opt-level = 'z'
panic = "abort"