[package]
name = "context"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "develop", package = "tezos-core", default-features = false }
tezos_rpc = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "develop", package = "tezos-rpc", default-features = false }
tezos_michelson = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "develop", package = "tezos-michelson", default-features = false }
serde-json-wasm = "*"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99"
