[package]
name = "dac_codec"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dac-codec"
path = "src/main.rs"

[dependencies]
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-core" }
tezos_encoding = { git = "https://github.com/emturner/tezedge.git", branch = "master", default-features = false }
tezos_rollup_encoding = { git = "https://gitlab.com/tezos/kernel", rev = "1e1d96a9f1c594efd11c57bad0fa96e5d90c3fca" }
clap = { version = "4.0.29", features = ["derive"] }
once_cell = "1.16.0"
hex = "*"