[package]
name = "dac_coder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dac-coder"
path = "src/main.rs"

[dependencies]
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "fix/deps-disable-default-features", package = "tezos-core" }
tezos_encoding = { git = "https://github.com/emturner/tezedge.git", branch = "master" }
tezos_rollup_encoding = { git = "https://gitlab.com/m-kus/kernel", branch = "imp/installer-rlib" }
clap = { version = "4.0.29", features = ["derive"] }
hex = { version = "0.4.3" }
once_cell = "1.16.0"
