[package]
name = "tez_facade"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "*"
actix-web = "4"
reqwest = { version = "0.11.14", features = ["json"] }
log = "0.4.17"
lru = "*"
hex = "*"
derive_more = "0.99"
serde_json = "*"
context = { path = "../context" }
tezos_l2 = { path = "../tezos_l2" }
tezos_rpc = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "fix/block-header-encoder", package = "tezos-rpc", default-features = false }
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "fix/block-header-encoder", package = "tezos-core", default-features = false, features = ["ed25519"] }
tezos_michelson = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "fix/block-header-encoder", package = "tezos-michelson", default-features = false }
ibig = { version = "0.3", features = ["std", "num-traits"], default-features = false }