[package]
name = "tez_facade"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "*"
actix-web = "4"
async-trait = "0.1.63"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
log = "0.4.17"
hex = "*"
derive_more = "0.99"
serde_json = "*"
context = { path = "../context" }
tezos_l2 = { path = "../tezos_l2" }
tezos_vm = { path = "../tezos_vm" }
tezos_rpc = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "develop", package = "tezos-rpc", default-features = false }
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "develop", package = "tezos-core", default-features = false, features = ["ed25519"] }
tezos_operation = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "develop", package = "tezos-operation", default-features = false, features = ["ed25519"] }
tezos_michelson = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "develop", package = "tezos-michelson", default-features = false }
ibig = { version = "0.3", features = ["std", "num-traits"], default-features = false }
mock_runtime = { git = "https://gitlab.com/tezos/kernel" }