[package]
name = "genesis_kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
host = { git = "https://gitlab.com/tezos/kernel" }
mock_runtime = { git = "https://gitlab.com/tezos/kernel" }
tezos_encoding = { git = "https://github.com/emturner/tezedge.git", branch = "master" }
tezos_rollup_encoding = { git = "https://gitlab.com/tezos/kernel" }
hex = { version = "0.4.3" }
once_cell = "1.16.0"
tez_kernel = { path = "../tez_kernel" }
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/dal-reveal-hash-encoding", package = "tezos-core" }

[features]  
default = []
std = []
