[package]
name = "installer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
host = { git = "https://gitlab.com/tezos/tezos", branch = "master", package = "tezos_smart_rollup_host" }
mock_runtime = { git = "https://gitlab.com/tezos/tezos", branch = "master", package = "tezos_smart_rollup_mock" }
tezos_rollup_encoding = { git = "https://gitlab.com/tezos/tezos", branch = "master", package = "tezos_smart_rollup_encoding" }
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-core" }
hex = { version = "0.4.3" }
once_cell = "1.16.0"

[features]  
default = []
std = []
