[package]
name = "tez_kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tezos_ctx = { path = "../tezos_ctx" }
tezos_l2 = { path = "../tezos_l2" }
host = { git = "https://gitlab.com/tezos/kernel", rev = "1e1d96a9f1c594efd11c57bad0fa96e5d90c3fca" }
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-core", default-features = false }
tezos_operation = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-operation", default-features = false }

derive_more = "0.99"
hex = "*"

[dev-dependencies]
tezos_rpc = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-rpc", default-features = false }
mock_runtime = { git = "https://gitlab.com/tezos/kernel", rev = "1e1d96a9f1c594efd11c57bad0fa96e5d90c3fca" }
hex = "*"