[package]
name = "layered_store"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0.99"
tezos-smart-rollup-host = { version = "0.2.0", features = ["proto-nairobi"], default-features = false }
tezos-smart-rollup-core = { version = "0.2.0", default-features = false }

[dev-dependencies]
tezos-smart-rollup-host = { version = "0.2.0", features = ["proto-nairobi", "crypto"], default-features = false }
tezos-smart-rollup-mock = { version = "0.2.0", features = ["proto-nairobi"], default-features = false }