# SPDX-FileCopyrightText: 2023 Baking Bad <hello@bakingbad.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = "layered_store"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0.99"
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", optional = true, branch = "feat/ibig-drop-in", package = "tezos-core", default-features = false, features = ["ed25519"] }
tezos_michelson = { git = "https://github.com/m-kus/tezos-rust-sdk", optional = true, branch = "feat/ibig-drop-in", package = "tezos-michelson", default-features = false }

[features]
default = []
testing = ["tezos"]
tezos = ["dep:tezos_core", "dep:tezos_michelson"]