[package]
name = "michelson_interop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
michelson_derive = { path = "../michelson_derive" }
tezos_michelson = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-michelson", default-features = false }
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-core", default-features = false }
derive_more = "0.99"
num-traits = { version = "*", default-features = false }
ibig = { version = "0.3", features = ["std", "num-traits", "serde"], default-features = false }

[dev-dependencies]
