# SPDX-FileCopyrightText: 2023 Baking Bad <hello@bakingbad.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = "michelson_vm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tezos_core = { git = "https://github.com/baking-bad/tezos-rust-sdk", branch = "develop", package = "tezos-core", default-features = false, features = ["ed25519"] }
tezos_michelson = { git = "https://github.com/baking-bad/tezos-rust-sdk", branch = "develop", package = "tezos-michelson", default-features = false }
serde-json-wasm = { git = "https://github.com/CosmWasm/serde-json-wasm", branch = "main" }
derive_more = "0.99"
blake2 = "0.10"
chrono = { version = "0.4", default-features = false }
hex = "*"
ibig = { version = "0.3", features = ["std", "num-traits"], default-features = false }
once_cell = "*"
layered_store = { path = "../layered_store", features = ["tezos"], default-features = false }

[features]
default = ["mock", "trace"]
trace = []
mock = []