# SPDX-FileCopyrightText: 2023 Baking Bad <hello@bakingbad.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = "sapling_kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tezos-smart-rollup = { version = "0.2.0", default-features = false, features = ["panic-hook", "proto-nairobi"] }
sapling_proto = { path = "../sapling_proto" }
