# SPDX-FileCopyrightText: 2023 Baking Bad <hello@bakingbad.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = "sapling_proto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
layered_store = { path = "../layered_store", default-features = false }
zcash_proofs = { git = "https://github.com/zcash/librustzcash", package = "zcash_proofs", default-features = false }
zcash_primitives = { git = "https://github.com/zcash/librustzcash", package = "zcash_primitives", default-features = false }
zcash_note_encryption = { git = "https://github.com/zcash/librustzcash", package = "zcash_note_encryption", default-features = false }
incrementalmerkletree = { version = "0.4", features = ["legacy-api"] }
bls12_381 = "0.8"
blake2b_simd = "1.0.1"
bellman = { version = "0.14", default-features = false, features = ["groth16"] }
anyhow = "1.0"
derive_more = "*"
lazy_static = "*"
hex = "*"

[dev-dependencies]
mockall = "*"