[package]
name = "tez_kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
host = { git = "https://gitlab.com/tezos/kernel" }
derive_more = "0.99"
tez_proto = { path = "../tez_proto" }
hex = "*"

[dev-dependencies]
mock_runtime = { git = "https://gitlab.com/tezos/kernel" }
hex = "*"

[features]
default = []
repl = []