[package]
name = "tezos_ctx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "fix/operation-encoding", package = "tezos-core", default-features = false }
tezos_rpc = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "fix/operation-encoding", package = "tezos-rpc", default-features = false }
tezos_michelson = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "fix/operation-encoding", package = "tezos-michelson", default-features = false }
tezos_operation = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "fix/operation-encoding", package = "tezos-operation", default-features = false, features = ["ed25519"] }
serde-json-wasm = "*"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99"
chrono = { version = "0.4", default-features = false }