[package]
name = "tezos_kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
layered_store = { path = "../layered_store", features = ["kernel"] }
tezos_proto = { path = "../tezos_proto" }
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-core", default-features = false }
tezos_operation = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-operation", default-features = false }
tezos-smart-rollup = { version = "0.2.0", features = ["proto-nairobi"] }
derive_more = "0.99"

[dev-dependencies]
tezos_data_encoding = { version = "0.5" }
tezos-smart-rollup-mock = { version = "0.2.0", features = ["proto-nairobi"] }
tezos_rpc = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-rpc", default-features = false }
hex = "*"