[package]
name = "tezos_kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0.99"
layered_store = { path = "../layered_store", default-features = false }
tezos_proto = { path = "../tezos_proto" }
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-core", default-features = false }
tezos_operation = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-operation", default-features = false }
tezos-smart-rollup-host = { version = "0.2.0", features = ["proto-nairobi"], default-features = false }
# TODO: feature enable "panic-hook-abort"
tezos-smart-rollup-entrypoint = { version = "0.2.0", features = ["panic-hook", "std", "panic-hook-debug"], default-features = false }
tezos-smart-rollup-core = { version = "0.2.0", default-features = false }

[dev-dependencies]
tezos_data_encoding = { version = "0.5" }
tezos-smart-rollup = { version = "0.2.0", features = ["proto-nairobi", "panic-hook", "crypto"] }
tezos-smart-rollup-mock = { version = "0.2.0", features = ["proto-nairobi"] }
tezos_rpc = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-rpc", default-features = false }
hex = "*"