[package]
name = "tezos_l2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tezos_vm = { path = "../tezos_vm" }
tezos_ctx = { path = "../tezos_ctx" }
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "fix/operation-encoding", package = "tezos-core", default-features = false, features = ["ed25519"] }
tezos_operation = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "fix/operation-encoding", package = "tezos-operation", default-features = false, features = ["ed25519"] }
tezos_rpc = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "fix/operation-encoding", package = "tezos-rpc", default-features = false }
tezos_michelson = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "fix/operation-encoding", package = "tezos-michelson", default-features = false }
serde-json-wasm = "*"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99"
blake2 = "0.10"
chrono = { version = "0.4", default-features = false }
ibig = { version = "0.3", features = ["std", "num-traits"], default-features = false }

[dev-dependencies]
ed25519-dalek = { version = "1.0.1" }
serde_json = "*"