# SPDX-FileCopyrightText: 2023 Baking Bad <hello@bakingbad.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = "tezos_node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tezos-node"
path = "src/main.rs"

[[bin]]
name = "mock-node"
path = "src/mock.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
serde = "*"
actix-web = "4"
async-trait = "0.1.63"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
log = "0.4.17"
env_logger = "0.10.0"
hex = "*"
derive_more = "0.99"
serde_json = "*"
layered_store = { path = "../layered_store", default-features = false, features = ["tezos"] }
tezos_proto = { path = "../tezos_proto" }
michelson_vm = { path = "../michelson_vm" }
tezos_rpc = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-rpc", default-features = false }
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-core", default-features = false, features = ["ed25519"] }
tezos_operation = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-operation", default-features = false, features = ["ed25519"] }
tezos_michelson = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-michelson", default-features = false }
tezos_contract = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-contract", default-features = false }
ibig = { version = "0.3", features = ["std", "num-traits"], default-features = false }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["process", "macros"] }
static_init = "1.0.3"
tezos_rpc = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-rpc", features = ["http"] }