# SPDX-FileCopyrightText: 2023 Baking Bad <hello@bakingbad.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = "tezos_proto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
michelson_vm = { path = "../michelson_vm" }
layered_store = { path = "../layered_store", default-features = false, feature = ["tezos"] }
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-core", default-features = false, features = ["ed25519"] }
tezos_operation = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-operation", default-features = false, features = ["ed25519"] }
tezos_rpc = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-rpc", default-features = false }
tezos_michelson = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-michelson", default-features = false }
serde-json-wasm = { git = "https://github.com/CosmWasm/serde-json-wasm", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99"
blake2 = "0.10"
chrono = { version = "0.4", default-features = false }
ibig = { version = "0.3", features = ["std", "num-traits"], default-features = false }

[dev-dependencies]
ed25519-dalek = { version = "1.0.1" }
serde_json = "*"