[package]
name = "tezos_vm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tezos_ctx = { path = "../tezos_ctx" }
tezos_core = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-core", default-features = false, features = ["ed25519"] }
tezos_michelson = { git = "https://github.com/m-kus/tezos-rust-sdk", branch = "feat/ibig-drop-in", package = "tezos-michelson", default-features = false }
serde-json-wasm = "*"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99"
blake2 = "0.10"
chrono = { version = "0.4", default-features = false }
hex = "*"
ibig = { version = "0.3", features = ["std", "num-traits"], default-features = false }
once_cell = "*"

[features]
default = []
trace = []