[package]
name = "zcash_params"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fetch-verifying-keys"
path = "src/main.rs"

[dependencies]
bls12_381 = "0.8"
bellman = { version = "0.14", default-features = false, features = ["groth16"] }
zcash_proofs = { git = "https://github.com/zcash/librustzcash", package = "zcash_proofs", default-features = false, features = ["download-params"] }