# SPDX-FileCopyrightText: 2023 Baking Bad <hello@bakingbad.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = "zcash_params"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fetch-verifying-keys"
path = "src/main.rs"

[dependencies]
bls12_381 = "0.8"
bellman = { version = "0.14", default-features = false, features = ["groth16"] }
zcash_proofs = { version = "0.12.1", default-features = false, features = ["download-params"] }